whitespace fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,13 @@
 html,
 body {
   height: 100%;
-  // width: 100%;
+  width: 100%;
   font-family: "Lato", sans-serif;
   line-height: 1.4;
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
   .wrapper {
     height: 100%;
     width: 100%;
@@ -246,6 +249,9 @@ body {
         width: 100%;
         position: relative;
         overflow: hidden;
+        &:hover {
+          cursor: pointer;
+        }
         img {
           height: 100%;
           width: 100%;
@@ -559,8 +565,14 @@ body {
               display: inline-block;
               font-size: 13px;
               color: #424242;
-              margin: 10px 0px;
               border-radius: 20px;
+              margin: 10px -50px;
+              position: relative;
+              top: 50%;
+              left: 50%;
+              &:hover {
+                cursor: pointer;
+              }
             }
           }
         }
